gccida/c1/free_edge
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/free_edge/src/cfg.c:616:12: error: expected expression
*( _OWORD *)&e->flags = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/free_edge/src/cfg.c:616:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&e->flags = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/free_edge/src/cfg.c:617:12: error: expected expression
*( _OWORD *)&e->insns = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/free_edge/src/cfg.c:617:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&e->insns = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/free_edge/src/cfg.c:618:12: error: expected expression
*( _OWORD *)&e->src = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/free_edge/src/cfg.c:618:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&e->src = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/free_edge/src/cfg.c:619:12: error: expected expression
*( _OWORD *)&e->pred_next = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/free_edge/src/cfg.c:619:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&e->pred_next = 0LL; 
   ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/free_edge/src/obj/cfg.o] Error 1
